--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   mockito: ^5.3.2
   build_runner: ^2.3.3
+  dio: ^5.0.2
 
 dev_dependencies:
   flutter_test:
