--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   build_runner: ^2.3.3
   dio: ^5.0.2
   provider: ^6.0.5
+  asuka: ^2.0.2
+  top_snackbar_flutter: ^3.0.0+1
 
 dev_dependencies:
   flutter_test:
